--- a/views/index.html
+++ b/views/index.html
@@ -7,7 +7,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <!-- Your app title -->
-    <title>My App</title>
+    <title>时光宝盒</title>
     <!-- Path to Framework7 iOS CSS theme styles-->
     <link rel="stylesheet" href="/stylesheets/framework7.ios.min.css">
     <!-- Path to Framework7 iOS related color styles -->
