--- a/views/index.html
+++ b/views/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="/stylesheets/framework7.ios.colors.min.css">
     <link rel="stylesheet" href="/stylesheets/font-awesome.min.css">
     <link rel="stylesheet" href="/stylesheets/my-font.css">
+    <link rel="stylesheet" href="/stylesheets/my-app.css">
     <style type="text/css">
       .swiper-container {
         height: 100%;
@@ -55,6 +56,7 @@
         <div class="pages navbar-through toolbar-through">
           <!-- Page, "data-page" contains page name -->
           <div data-page="index" class="page">
+            <img width="100%" height="100%" src="http://img1.mobile.360.cn/c0/cdn/baibian/themes/images/origin/preview1_resources_83440620_1372683756504.jpg">
             <!-- Scrollable page content -->
             <div class="page-content">
               <i class="fa fa-photo my-fa-photo" aria-hidden="true"></i>
